sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:3: error: not found: value ecart
  ecart = getValueCount();
  ^AlgCombSort:4: error: not found: value O
  var i = O;
          ^AlgCombSort:6: error: not found: value ecart
    if(ecart > 1){
       ^AlgCombSort:7: error: not found: value ecart
      ecart = ecart / 1.3
      ^AlgCombSort:8: error: not found: value O
      i = O;
          ^AlgCombSort:17: error: not found: value ecart
  }while(ecart>1)
         ^